# adventofcxx2022

./: .gitignore  CMakeLists.txt  README.md  go.mod  main.go
puzzles/p1/: 1_1.go  Description.md
src/: main.cpp  puzzles.hpp
src/puzzles/: 1.cpp  1.hpp  10.cpp  12.cpp  2.cpp  2.hpp  3.cpp  4.cpp  5.cpp  6.cpp  7.cpp  8.cpp  9.cpp
src/puzzles/p1/: 1.cpp  1.hpp
src/utils/: path.hpp  put_output.hpp  read_input.hpp
